output.txt
cpp991$ g++ myArray.cpp 
myArray.cpp: In function ‘std::istream& operator>>(std::istream&, myArray&)’:
myArray.cpp:134:34: error: expected primary-expression before ‘.’ token
  134 |   while( b.n < 0 || b.n > myArray.MAX ){
      |                                  ^
myArray.cpp:136:17: error: expected primary-expression before ‘.’ token
  136 |       << myArray.MAX << endl;
      |                 ^
cpp991$ 
